Fixed skill items alignment on small screen sizes.

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -107,10 +107,6 @@ section {
     color: $light-font-color;
     font-size: 1.25rem;
 
-    i {
-        display: none;
-    }
-    
     p {
         padding-left: 0.5rem;
     }
@@ -320,10 +316,6 @@ a.btt-icon{
 
     .skill-item {
         font-size: 1.5rem;
-
-        i {
-            display: inline;
-        }
     }
 
     #skill-js {
